--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "start": "vue-cli-service serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "backend": "json-server --watch data.json --port 3000"
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "json-server": "^0.17.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.14",
     "vuex": "^4.0.2"
