--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "vue-cli-service serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
@@ -11,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "express": "^4.18.2",
     "json-server": "^0.17.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.14",
